# murmurs_ruby_rails

./: Dockerfile  Gemfile  app.py  final_summary  pyproject.toml
app/controllers/: home_controller.rb  murmurs_controller.rb  registrations_controller.rb  sessions_controller.rb  users_controller.rb
app/controllers/api/: base_controller.rb  follows_controller.rb  likes_controller.rb  murmurs_controller.rb  users_controller.rb
app/javascript/controllers/: follow_controller.js  like_controller.js
app/javascript/packs/: application.js
app/javascript/stylesheets/: application.scss
app/models/: follow.rb  like.rb  murmur.rb  user.rb
app/static/: api.js  app.js  demo-data.js  functions.js  index.html  main.js  proxy.js
app/views/home/: index.html.erb
app/views/layouts/: application.html.erb
app/views/murmurs/: _murmur.html.erb  show.html.erb
app/views/pwa/: manifest.json.erb
app/views/registrations/: new.html.erb
app/views/sessions/: new.html.erb
app/views/shared/: _header.html.erb
attached_assets/: Pasted--Coding-Test-for-Ruby-Rails-engineer-Web-Application-Test-Note-Make-sure-you-run-this--1747621212592.txt  Pasted-You-re-making-excellent-progress-the-core-of-your-app-authentication-planned-posting-sets--1747623576356.txt  Pasted-Your-progress-looks-great-so-far-Here-s-a-quick-UX-UI-functionality-review-based-on-your-update-1747623241426.txt
config/: credentials.yml.enc  database.yml
db/migrate/: 20240520000001_create_users.rb  20240520000002_create_murmurs.rb  20240520000003_create_follows.rb  20240520000004_create_likes.rb
(+3 files in other folders)
